Fixed sizing issues for Hi there element on small phones

--- a/style.css
+++ b/style.css
@@ -414,8 +414,8 @@ nav .fas{
     }
     .header-main{
         position: relative;
-        top: 310px;
-        font-size: 30px;
+        top: 170px;
+        font-size: 20px;
         margin-left: -12px;
     }
     .header-text p{
